fix PizzaRestaurant live link

--- a/portfolio/json/projects.json
+++ b/portfolio/json/projects.json
@@ -13,7 +13,7 @@
     "technology": "VueJS, Vuex, Vue-router, Firebase",
     "image": "images/project-thumbnail/pizzarestaurant.png",
     "github": "https://github.com/trachanh1609/pizza-restaurant",
-    "live":"https://github.com/trachanh1609/portfolio/projects/PizzaRestaurant/"
+    "live":"https://trachanh1609.github.io/portfolio/projects/PizzaRestaurant/"
   },
   {
     "index": 1,
